[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
description_file=README.md
license_files = LICENSE

[options]
package_dir =
    = py2vision
packages = find:
python_requires = >=3.6